--- a/trunk/e107_0.8/e107_plugins/forum/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/forum/plugin.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.19 2009-07-07 02:22:57 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.20 2009-07-09 02:47:15 e107coders Exp $ -->
 <e107Plugin name="Forum" version="2.0" compatibility="0.8" installRequired="true" xhtmlcompliant="true" >
 	<author name="e107dev" url="http://e107.org"/>
 	<description>This plugin is a fully featured Forum system</description>
 	<folder>forum</folder>
+	<category>content</category> 
 	<administration>
 		<configFile>forum_admin.php</configFile>
 		<subMenuItem title="Front Page" description="Forum Front Page" link="forum_admin.php" icon="manage" />
