--- a/e107_0.8/e107_plugins/alt_auth/plugin.xml
+++ b/e107_0.8/e107_plugins/alt_auth/plugin.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.1 2008-12-09 20:40:54 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.2 2009-07-09 02:47:13 e107coders Exp $ -->
 
 <e107Plugin name="LAN_ALT_65" version="0.4" compatibility="0.8" installRequired="true" >
 	<author name="McFly/steved" url="e107.org" email="mcfly@e107.org" />
 	<description>LAN_ALT_66</description>
 	<folder>alt_auth</folder>
+	<category>users</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<logLanguageFile filename="languages/--LAN--/--LAN--_log.php" />
 	<administration>
