--- a/e107_0.8/e107_plugins/featurebox/plugin.xml
+++ b/e107_0.8/e107_plugins/featurebox/plugin.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.2 2008-12-13 10:30:24 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-07-09 02:47:15 e107coders Exp $ -->
 
 	<e107Plugin name="FBLAN_01" version="1.0" compatibility="0.8" installRequired="true">
 	<author name="Steve Dunstan (jalist)" url="http://e107.org" email="jalist@e107.org" />
 	<description>FBLAN_02</description>
 	<logLanguageFile filename="languages/--LAN--_admin_featurebox.php" />
 	<folder>featurebox</folder>
+	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<administration>
 		<configFile>admin_config.php</configFile>
