--- a/e107_0.8/e107_plugins/links_page/plugin.xml
+++ b/e107_0.8/e107_plugins/links_page/plugin.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.2 2008-12-17 20:26:57 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-07-09 02:47:15 e107coders Exp $ -->
 
 	<e107Plugin name="LCLAN_PLUGIN_LAN_1" version="1.12" compatibility="0.8" installRequired="true">
 	<author name="e107devs" url="http://e107.org" />
 	<description>Links Page For Displaying External Web Links</description>
 	<folder>links_page</folder>
+	<category>content</category> 
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<logLanguageFile filename="languages/--LAN--_admin_links_page.php" />
 	<administration>
