--- a/e107_0.8/e107_plugins/newsfeed/plugin.xml
+++ b/e107_0.8/e107_plugins/newsfeed/plugin.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
 <!-- Copyright e107 Inc e107.org, Licensed under GNU GPL (http://www.gnu.org/licenses/gpl.txt) -->
-<!-- $Id: plugin.xml,v 1.1 2008-12-20 10:39:29 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.2 2009-07-09 02:47:15 e107coders Exp $ -->
 
 <e107Plugin name="NFLAN_01" version="2.0" compatibility="0.8" installRequired="true">
 	<author name="Steve Dunstan (jalist)" url="http://e107.org" email="jalist@e107.org" />
 	<description>NFLAN_02</description>
 	<folder>newsfeed</folder>
+	<category>content</category>  
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<logLanguageFile filename="languages/--LAN--_admin_newsfeed.php" />
 	<administration>
