--- a/trunk/e107_0.8/e107_plugins/featurebox/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/featurebox/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.3 2009-07-09 02:47:15 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.4 2009-07-14 03:50:56 e107coders Exp $ -->
 
 	<e107Plugin name="FBLAN_01" version="1.0" compatibility="0.8" installRequired="true">
-	<author name="Steve Dunstan (jalist)" url="http://e107.org" email="jalist@e107.org" />
+	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>FBLAN_02</description>
 	<logLanguageFile filename="languages/--LAN--_admin_featurebox.php" />
 	<folder>featurebox</folder>
