--- a/trunk/e107_0.8/e107_plugins/rss_menu/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/rss_menu/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.2 2009-07-09 02:47:16 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-07-14 03:50:56 e107coders Exp $ -->
 
 	<e107Plugin name="RSS_PLUGIN_LAN_1" version="1.1" compatibility="0.8" installRequired="true">
-	<author name="e107dev" url="http://e107.org" />
+	<author name="e107 Inc." url="http://e107.org" />
 	<description>RSS_PLUGIN_LAN_2</description>
 	<compatibility>0.8</compatibility>
 	<folder>rss_menu</folder>
-	<category>misc</category> 
+	<category>misc</category>
 	<logLanguageFile filename="languages/--LAN--_admin_rss_menu.php" />
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<administration>
