--- a/e107_0.8/e107_plugins/calendar_menu/plugin.xml
+++ b/e107_0.8/e107_plugins/calendar_menu/plugin.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.6 2009-07-09 02:47:13 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-07-14 03:50:55 e107coders Exp $ -->
 
 <e107Plugin name="EC_ADLAN_1" version="3.70" compatibility="0.8" installRequired="true">
-	<author name="jalist / cameron / McFly / Barry / Lisa_ / steved" url="http://e107.org" />
+	<author name="e107 Inc. + Barry" url="http://e107.org" />
 	<description>EC_ADLAN_A206</description>
 	<readMe>readme.pdf</readMe>
 	<folder>calendar_menu</folder>
-	<category>content</category> 
+	<category>content</category>
 	<installLanguageFile filename="languages/--LAN--_install.php" />
 	<logLanguageFile filename="languages/--LAN--_log.php" />
 	<administration>
