--- a/e107_0.8/e107_plugins/chatbox_menu/plugin.xml
+++ b/e107_0.8/e107_plugins/chatbox_menu/plugin.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.3 2009-07-09 02:47:13 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.4 2009-07-14 03:50:55 e107coders Exp $ -->
 
 <e107Plugin name="CHBLAN_40" version="1.0" compatibility="0.8" installRequired="true">
-	<author name="e107" url="http://e107.org" email="jalist@e107.org" />
+	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>CHBLAN_41</description>
 	<folder>chatbox_menu</folder>
-	<category>content</category> 
+	<category>content</category>
 	<logLanguageFile filename="languages/--LAN--/--LAN--_config.php" />
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<administration>
