--- a/e107_0.8/e107_plugins/gsitemap/plugin.xml
+++ b/e107_0.8/e107_plugins/gsitemap/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.1 2008-12-20 21:48:06 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.2 2009-07-14 03:50:56 e107coders Exp $ -->
 
 <e107Plugin name="GSLAN_19" version="1.0" compatibility="0.8" installRequired="true">
-	<author name="cameron / jalist" url="http://e107coders.org" email="cameron@e107coders.org" />
+	<author name="e107 Inc." url="http://e107coders.org" email="cameron@e107coders.org" />
 	<description>GSLAN_41</description>
 	<logLanguageFile filename="languages/--LAN--_admin_gsitemap.php" />
 	<folder>gsitemap</folder>
