--- a/e107_0.8/e107_plugins/list_new/plugin.xml
+++ b/e107_0.8/e107_plugins/list_new/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.3 2009-01-27 21:33:52 lisa_ Exp $ -->
+<!-- $Id: plugin.xml,v 1.4 2009-07-14 03:50:56 e107coders Exp $ -->
 
 <e107Plugin name="LIST_PLUGIN_1" version="1.0" compatibility="0.8" installRequired="true">
-	<author name="e107dev" url="http://e107.org"/>
+	<author name="e107 Inc." url="http://e107.org"/>
 	<description>LIST_PLUGIN_2</description>
 	<folder>list_new</folder>
 	<logLanguageFile filename="languages/--LAN--_admin_list_new.php" />
