--- a/trunk/e107_0.8/e107_plugins/alt_auth/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/alt_auth/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.2 2009-07-09 02:47:13 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-07-14 03:57:22 e107coders Exp $ -->
 
 <e107Plugin name="LAN_ALT_65" version="0.4" compatibility="0.8" installRequired="true" >
-	<author name="McFly/steved" url="e107.org" email="mcfly@e107.org" />
+	<author name="e107 Inc." url="e107.org" email="mcfly@e107.org" />
 	<description>LAN_ALT_66</description>
 	<folder>alt_auth</folder>
 	<category>users</category>
