--- a/trunk/e107_0.8/e107_plugins/trackback/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/trackback/plugin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 
-<!-- $Id: plugin.xml,v 1.1 2008-12-20 22:32:36 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.2 2009-07-14 03:57:22 e107coders Exp $ -->
 
 <e107Plugin name="TRACKBACK_L16" version="1.1" compatibility="0.8" installRequired="true">
-	<author name="jalist" url="http://e107.org" email="jalist@e107.org" />
+	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>TRACKBACK_L2</description>
 	<folder>trackback</folder>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
