--- a/e107_0.8/e107_plugins/linkwords/plugin.xml
+++ b/e107_0.8/e107_plugins/linkwords/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.2 2008-12-13 10:30:24 e107steved Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-07-14 03:57:22 e107coders Exp $ -->
 <e107Plugin name="LWLANINS_1" version="1.1" compatibility="0.8" installRequired="true" >
-	<author name="jalist, steved" url="http://e107.org" />
+	<author name="e107 Inc." url="http://e107.org" />
 	<description>This plugin will link specified words with a defined link and/or tooltip</description>
 	<folder>linkwords</folder>
 	<logLanguageFile filename="languages/--LAN--_admin_linkwords.php" />
