--- a/trunk/e107_0.8/e107_plugins/pm/plugin.xml
+++ b/trunk/e107_0.8/e107_plugins/pm/plugin.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.5 2009-07-14 03:50:56 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.6 2009-07-16 10:20:59 marj_nl_fr Exp $ -->
 <e107Plugin name="{ADLAN_PM}" version="3.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." email="mcfly@e107.org"/>
-	<description>{ADLAN_PM_57}</description>
+	<description>ADLAN_PM_57</description>
 	<folder>pm</folder>
 	<category>users</category>
 	<administration>
