--- a/e107_0.8/e107_plugins/pm/plugin.xml
+++ b/e107_0.8/e107_plugins/pm/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.6 2009-07-16 10:20:59 marj_nl_fr Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-07-16 10:22:05 marj_nl_fr Exp $ -->
 <e107Plugin name="{ADLAN_PM}" version="3.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." email="mcfly@e107.org"/>
 	<description>ADLAN_PM_57</description>
@@ -9,7 +9,7 @@
 		<configFile>pm_conf.php</configFile>
 		<icon>images/pvt_message_32.png</icon>
 		<iconSmall>images/pvt_message_16.png</iconSmall>
-		<caption>{ADLAN_PM_2}</caption>
+		<caption>ADLAN_PM_2</caption>
 	</administration>
 	<management>
 		<install type="fileFunction" file="pm_install.php" function="forum_install" />
