--- a/e107_0.8/e107_plugins/pm/plugin.xml
+++ b/e107_0.8/e107_plugins/pm/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.7 2009-07-16 10:22:05 marj_nl_fr Exp $ -->
-<e107Plugin name="{ADLAN_PM}" version="3.0" compatibility="0.8" installRequired="true">
+<!-- $Id: plugin.xml,v 1.8 2009-07-16 10:24:44 marj_nl_fr Exp $ -->
+<e107Plugin name="ADLAN_PM" version="3.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." email="mcfly@e107.org"/>
 	<description>ADLAN_PM_57</description>
 	<folder>pm</folder>
