--- a/e107_0.8/e107_plugins/forum/plugin.xml
+++ b/e107_0.8/e107_plugins/forum/plugin.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.20 2009-07-09 02:47:15 e107coders Exp $ -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id: plugin.xml,v 1.21 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
 <e107Plugin name="Forum" version="2.0" compatibility="0.8" installRequired="true" xhtmlcompliant="true" >
 	<author name="e107dev" url="http://e107.org"/>
 	<description>This plugin is a fully featured Forum system</description>
