--- a/e107_0.8/e107_plugins/linkwords/plugin.xml
+++ b/e107_0.8/e107_plugins/linkwords/plugin.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.3 2009-07-14 03:57:22 e107coders Exp $ -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id: plugin.xml,v 1.4 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
 <e107Plugin name="LWLANINS_1" version="1.1" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>This plugin will link specified words with a defined link and/or tooltip</description>
