--- a/e107_0.8/e107_plugins/pm/plugin.xml
+++ b/e107_0.8/e107_plugins/pm/plugin.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.8 2009-07-16 10:24:44 marj_nl_fr Exp $ -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id: plugin.xml,v 1.9 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
 <e107Plugin name="ADLAN_PM" version="3.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." email="mcfly@e107.org"/>
 	<description>ADLAN_PM_57</description>
