--- a/e107_0.8/e107_plugins/poll/plugin.xml
+++ b/e107_0.8/e107_plugins/poll/plugin.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="iso-8859-1"?>
-<!-- $Id: plugin.xml,v 1.7 2009-07-14 03:50:56 e107coders Exp $ -->
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id: plugin.xml,v 1.8 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
 <e107Plugin name="POLL_ADLAN01" version="2.0" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>POLL_ADLAN02</description>
