--- a/e107_0.8/e107_plugins/featurebox/plugin.xml
+++ b/e107_0.8/e107_plugins/featurebox/plugin.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.5 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
+<!-- $Id: plugin.xml,v 1.6 2009-09-21 22:14:44 e107coders Exp $ -->
 
 	<e107Plugin name="FBLAN_01" version="1.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>FBLAN_02</description>
 	<logLanguageFile filename="languages/--LAN--_admin_featurebox.php" />
-	<folder>featurebox</folder>
 	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<administration>
@@ -17,6 +16,6 @@
 		<installDone>FBLAN_04</installDone>
 	</administration>
 	<mainPrefs>
-		<pref name="fb_active" value="1" />
+		<pref name="fb_active">1</pref>
 	</mainPrefs>
 </e107Plugin>
