--- a/e107_0.8/e107_plugins/poll/plugin.xml
+++ b/e107_0.8/e107_plugins/poll/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Id: plugin.xml,v 1.8 2009-07-17 14:41:54 marj_nl_fr Exp $ -->
+<!-- $Id: plugin.xml,v 1.9 2009-09-21 22:14:45 e107coders Exp $ -->
 <e107Plugin name="POLL_ADLAN01" version="2.0" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>POLL_ADLAN02</description>
@@ -14,6 +14,6 @@
 		<caption>POLL_ADLAN03</caption>
 		<installDone>POLL_ADLAN04</installDone>
 	</administration>
-	<mainPrefs>
-	</mainPrefs>
+	<pluginPrefs>
+	</pluginPrefs>
 </e107Plugin>
