--- a/e107_0.8/e107_plugins/banner/plugin.xml
+++ b/e107_0.8/e107_plugins/banner/plugin.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.2 2009-09-18 22:36:09 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.3 2009-09-24 00:11:19 e107coders Exp $ -->
 
-	<e107Plugin name="Banners" version="1.0" compatibility="0.8" installRequired="true">
+	<e107Plugin name="Banners" version="1.0" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>FBLAN_02</description>
 	<logLanguageFile filename="languages/--LAN--_admin_banner.php" />
-	<folder>banner</folder>
 	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<administration>
-		<configFile>admin_banner.php</configFile>
-		<icon>images/banners_32.png</icon>
-		<iconSmall>images/banners_16.png</iconSmall>
-		<caption>Configure Banners</caption>
-		<installDone></installDone>
-	</administration>
+	<adminLinks>
+		<link url='admin_banner.php' description='Configure Banners' icon='images/banners_32.png' iconSmall='images/banners_16.png' primary='true' >Configure Banners</link>	
+	</adminLinks>
 </e107Plugin>
