--- a/e107_0.8/e107_plugins/featurebox/plugin.xml
+++ b/e107_0.8/e107_plugins/featurebox/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.6 2009-09-21 22:14:44 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-09-24 00:11:20 e107coders Exp $ -->
 
 	<e107Plugin name="FBLAN_01" version="1.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
@@ -8,14 +8,13 @@
 	<logLanguageFile filename="languages/--LAN--_admin_featurebox.php" />
 	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<administration>
-		<configFile>admin_config.php</configFile>
-		<icon>images/featurebox_32.png</icon>
-		<iconSmall>images/featurebox_16.png</iconSmall>
-		<caption>Configure feature box</caption>
-		<installDone>FBLAN_04</installDone>
-	</administration>
+	<adminLinks>
+		<link url='admin_config.php' description='Configure feature box' icon='images/featurebox_32.png' iconSmall='images/featurebox_16.png' primary='true' >Configure feature box</link>		
+	</adminLinks>
 	<mainPrefs>
 		<pref name="fb_active">1</pref>
 	</mainPrefs>
+	<management>
+		<installDone>FBLAN_04</installDone>
+	</management>
 </e107Plugin>
