--- a/e107_0.8/e107_plugins/import/plugin.xml
+++ b/e107_0.8/e107_plugins/import/plugin.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.1 2009-07-20 15:24:34 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.2 2009-09-24 00:11:20 e107coders Exp $ -->
 
 	<e107Plugin name="LAN_CONVERT_01" version="1.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>Import into e107</description>
-	<folder>import</folder>
 	<category>tools</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<administration>
-		<configFile>admin_import.php</configFile>
-		<icon>images/import_32.png</icon>
-		<iconSmall>images/import_16.png</iconSmall>
-		<caption>Import into e107</caption>
-		<installDone></installDone>
-	</administration>
+	<adminLinks>
+		<link url='admin_import.php' description='Import into e107' icon='images/import_32.png' iconSmall='images/import_16.png' primary='true' >Import into e107</link>		
+	</adminLinks>	
 </e107Plugin>
