--- a/e107_0.8/e107_plugins/links_page/plugin.xml
+++ b/e107_0.8/e107_plugins/links_page/plugin.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.6 2009-09-21 22:14:44 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-09-24 00:11:20 e107coders Exp $ -->
 
-	<e107Plugin name="LCLAN_PLUGIN_LAN_1" version="1.12" compatibility="0.8" installRequired="true">
+	<e107Plugin name="LCLAN_PLUGIN_LAN_1" version="1.12" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>Links Page For Displaying External Web Links</description>
 	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
 	<logLanguageFile filename="languages/--LAN--_admin_links_page.php" />
-	<administration>
-		<configFile>admin_linkspage_config.php</configFile>
-		<icon>images/linkspage_32.png</icon>
-		<iconSmall>images/linkspage_16.png</iconSmall>
-		<caption>Configure Links Page</caption>
-		<installDone>Links page has successfully installed, please configure it from the Links Page link on the admin front page.</installDone>
-	</administration>
-	<menuLink name="Links" url="links_page/links.php" />
+		<adminLinks>
+		<link url='admin_linkspage_config.php' description='Configure Links Page' icon='images/linkspage_32.png' iconSmall='images/linkspage_16.png' primary='true' >Configure Links Page</link>	
+	</adminLinks>
+	<siteLinks>
+		<link url="links_page/links.php">Links</link>
+	</siteLinks>
 	<pluginPrefs>
 	</pluginPrefs>
+	<management>
+		<installDone>Links page has successfully installed, please configure it from the Links Page link on the admin front page.</installDone>
+	</management>
 </e107Plugin>
