More plugin-class tweaks, Support for {plugin}_setup.php file added.  TinyMce default settings added after install.  plugin.xml spec modified for language files and management.

--- a/e107_0.8/e107_plugins/calendar_menu/plugin.xml
+++ b/e107_0.8/e107_plugins/calendar_menu/plugin.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.10 2009-09-24 00:11:19 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.11 2009-10-20 03:49:22 e107coders Exp $ -->
 
-<e107Plugin name="EC_ADLAN_1" version="3.70" compatibility="0.8" installRequired="true">
+<e107Plugin name="EC_ADLAN_1" version="3.70" compatibility="0.8" installRequired="true" setupFile='calendar_setup.php'>
 	<author name="e107 Inc. + Barry" url="http://e107.org" />
 	<description>EC_ADLAN_A206</description>
 	<readMe>readme.pdf</readMe>
 	<category>content</category>
-	<installLanguageFile filename="languages/--LAN--_install.php" />
-	<logLanguageFile filename="languages/--LAN--_log.php" />
+	<languageFiles>
+		<file type='install' path='languages/--LAN--_install.php' />
+		<file type='log' path='languages/--LAN--_log.php' />	
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='EC_ADINST_LAN_05' icon='images/calendar_32.png' iconSmall='images/calendar_16.png' primary='true' >EC_ADINST_LAN_05</link>	
 	</adminLinks>
@@ -54,10 +56,4 @@
 		<pref name="eventpost_showcaticon">0</pref>
 		<pref name="eventpost_namelink">0</pref>
 	</mainPrefs>
-	<management>
-		<install when="post" type="classFunction" file="calendar_install.php" class="calendarInstall" function="postInstall" />
-		<uninstall when="pre" type="classFunction" file="calendar_install.php" class="calendarInstall" function="preUninstall" />
-		<upgrade when="pre" type="classFunction" file="calendar_install.php" class="calendarInstall" function="postUpgrade" />
-		<installDone>EC_ADINST_LAN_04</installDone>
-	</management>
 </e107Plugin>
