--- a/e107_0.8/e107_plugins/alt_auth/plugin.xml
+++ b/e107_0.8/e107_plugins/alt_auth/plugin.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.6 2009-09-24 00:11:19 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-10-20 03:49:21 e107coders Exp $ -->
 
 <e107Plugin name="LAN_ALT_65" version="0.4" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="e107.org" email="mcfly@e107.org" />
 	<description>LAN_ALT_66</description>
 	<category>users</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<logLanguageFile filename="languages/--LAN--/--LAN--_log.php" />
+	<languageFiles>
+		<file type='log' path='languages/--LAN--/--LAN--_log.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='alt_auth_conf.php' description='LAN_ALT_67' icon='images/alt_auth_32.png' iconSmall='images/alt_auth_16.png' primary='true' >LAN_ALT_67</link>	
 	</adminLinks>
@@ -16,7 +18,4 @@
 		<pref name="auth_nouser">0</pref>
 		<pref name="auth_extended"></pref>
 	</mainPrefs>
-	<management>
-		<installDone>LAN_ALT_68</installDone>	
-	</management>
 </e107Plugin>
