--- a/e107_0.8/e107_plugins/gsitemap/plugin.xml
+++ b/e107_0.8/e107_plugins/gsitemap/plugin.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Id: plugin.xml,v 1.5 2009-09-24 00:11:20 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.6 2009-10-20 03:49:22 e107coders Exp $ -->
 <e107Plugin name="GSLAN_19" version="1.0" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107coders.org" email="cameron@e107coders.org" />
 	<description>GSLAN_41</description>
-	<logLanguageFile filename="languages/--LAN--_admin_gsitemap.php" />
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_gsitemap.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='Configure feature box' icon='images/icon.png' iconSmall='images/icon_16.png' primary='true' >Configure Sitemap</link>		
 	</adminLinks>
@@ -13,7 +15,4 @@
 	</siteLinks>
 	<pluginPrefs>
 	</pluginPrefs>
-	<management>
-		<installDone>GSLAN_42</installDone>
-	</management>
 </e107Plugin>
