--- a/e107_0.8/e107_plugins/linkwords/plugin.xml
+++ b/e107_0.8/e107_plugins/linkwords/plugin.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Id: plugin.xml,v 1.6 2009-09-24 00:11:20 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-10-20 03:49:22 e107coders Exp $ -->
 <e107Plugin name="LWLANINS_1" version="1.1" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>This plugin will link specified words with a defined link and/or tooltip</description>
-	<logLanguageFile filename="languages/--LAN--_admin_linkwords.php" />
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_linkwords.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='Configure LinkWords' icon='images/linkwords_32.png' iconSmall='images/linkwords_16.png' primary='true' >Configure LinkWords</link>	
 	</adminLinks>
@@ -23,7 +25,4 @@
 			)
 		</pref>
 	</mainPrefs>
-	<management>
-		<installDone>To configure please click on the link in the plugins section of the admin front page</installDone>
-	</management>
 </e107Plugin>
