--- a/e107_0.8/e107_plugins/list_new/plugin.xml
+++ b/e107_0.8/e107_plugins/list_new/plugin.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.8 2009-09-24 00:11:20 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.9 2009-10-20 03:49:22 e107coders Exp $ -->
 
 <e107Plugin name="LIST_PLUGIN_1" version="1.0" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>LIST_PLUGIN_2</description>
-	<logLanguageFile filename="languages/--LAN--_admin_list_new.php" />
-	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
+	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>	
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_list_new.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_list_config.php' description='LIST_PLUGIN_3' icon='icon/list_32.png' iconSmall='icon/list_16.png' primary='true' >LIST_PLUGIN_3</link>	
 	</adminLinks>
@@ -15,7 +17,4 @@
 	</siteLinks>
 	<pluginPrefs>
 	</pluginPrefs>
-	<management>
-		<installDone>LIST_PLUGIN_4</installDone>
-	</management>
 </e107Plugin>
