--- a/e107_0.8/e107_plugins/newsfeed/plugin.xml
+++ b/e107_0.8/e107_plugins/newsfeed/plugin.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- Copyright e107 Inc e107.org, Licensed under GNU GPL (http://www.gnu.org/licenses/gpl.txt) -->
-<!-- $Id: plugin.xml,v 1.6 2009-09-24 00:11:20 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.7 2009-10-20 03:49:22 e107coders Exp $ -->
 
 <e107Plugin name="NFLAN_01" version="2.0" compatibility="0.8" installRequired="true">
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>NFLAN_02</description>
 	<category>content</category>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<logLanguageFile filename="languages/--LAN--_admin_newsfeed.php" />
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_newsfeed.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='Configure Newsfeeds' icon='images/newsfeed_32.png' iconSmall='images/newsfeed_16.png' primary='true' >Configure Newsfeeds</link>	
 	</adminLinks>
@@ -17,7 +19,4 @@
 	</siteLinks>	
 	<pluginPrefs>
 	</pluginPrefs>
-	<management>
-			<installDone>NFLAN_02</installDone>
-	</management>
 </e107Plugin>
