--- a/e107_0.8/e107_plugins/poll/plugin.xml
+++ b/e107_0.8/e107_plugins/poll/plugin.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Id: plugin.xml,v 1.10 2009-09-24 00:11:20 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.11 2009-10-20 03:49:22 e107coders Exp $ -->
 <e107Plugin name="POLL_ADLAN01" version="2.0" compatibility="0.8" installRequired="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>POLL_ADLAN02</description>
 	<category>content</category>  
-	<logLanguageFile filename="languages/--LAN--_admin_poll.php" />
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_poll.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='POLL_ADLAN03' icon='images/polls_32.png' iconSmall='images/polls_16.png' primary='true' >POLL_ADLAN03</link>	
 	</adminLinks>
