--- a/e107_0.8/e107_plugins/trackback/plugin.xml
+++ b/e107_0.8/e107_plugins/trackback/plugin.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.5 2009-09-24 00:11:21 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.6 2009-10-20 03:49:22 e107coders Exp $ -->
 
 <e107Plugin name="TRACKBACK_L16" version="1.1" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107.org" email="jalist@e107.org" />
 	<description>TRACKBACK_L2</description>
 	<copyright>Copyright e107 Inc e107.org, Licensed under GPL (http://www.gnu.org/licenses/gpl.txt)</copyright>
-	<logLanguageFile filename="languages/--LAN--_admin_trackback.php" />
+	<languageFiles>
+		<file type='log' path='languages/--LAN--_admin_trackback.php' />
+	</languageFiles>
 	<adminLinks>
 		<link url='admin_config.php' description='TRACKBACK_L1' icon='images/trackback_32.png' iconSmall='images/trackback_16.png' primary='true' >TRACKBACK_L1</link>	
 	</adminLinks>
@@ -14,7 +16,4 @@
 		<pref name="trackbackEnabled">0</pref>
 		<pref name="trackbackString">Trackback address for this post:</pref>
 	</mainPrefs>
-	<management>
-		<installDone>TRACKBACK_L3</installDone>
-	</management>
 </e107Plugin>
