--- a/e107_0.8/e107_plugins/forum/plugin.xml
+++ b/e107_0.8/e107_plugins/forum/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- $Id: plugin.xml,v 1.26 2009-10-20 03:49:22 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.27 2009-10-22 04:14:45 e107coders Exp $ -->
 <e107Plugin name="Forum" version="2.0" compatibility="0.8" installRequired="true" xhtmlcompliant="true" >
 	<author name="e107 Inc." url="http://e107.org" />
 	<description>This plugin is a fully featured Forum system</description>
@@ -12,7 +12,7 @@
 		<link url="forum_admin.php?opt" description="Forum Preferences"  icon="settings" perm="mainadmin" >Preferences</link>
 	</adminLinks>
 	<siteLinks>
-		<link url="forum/forum.php" perm='everyone'>Forum</link>		
+		<link url="{e_PLUGIN}forum/forum.php" perm='everyone'>Forum</link>		
 	</siteLinks>
 	<mainPrefs>
 		<pref name="forum_show_topics">1</pref>
