--- a/e107_0.8/e107_plugins/links_page/plugin.xml
+++ b/e107_0.8/e107_plugins/links_page/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- $Id: plugin.xml,v 1.8 2009-10-20 03:49:22 e107coders Exp $ -->
+<!-- $Id: plugin.xml,v 1.9 2009-10-22 04:14:45 e107coders Exp $ -->
 
 	<e107Plugin name="LCLAN_PLUGIN_LAN_1" version="1.12" compatibility="0.8" installRequired="true" releaseUrl=''>
 	<author name="e107 Inc." url="http://e107.org" />
@@ -14,7 +14,7 @@
 		<link url='admin_linkspage_config.php' description='Configure Links Page' icon='images/linkspage_32.png' iconSmall='images/linkspage_16.png' primary='true' >Configure Links Page</link>	
 	</adminLinks>
 	<siteLinks>
-		<link url="links_page/links.php">Links</link>
+		<link url="{e_PLUGIN}links_page/links.php">Links</link>
 	</siteLinks>
 	<pluginPrefs>
 	</pluginPrefs>
